app/k8s/blog/ingress-service-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx                              
    cert-manager.io/cluster-issuer: "letsencrypt-prod"       
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'        

spec:
  tls:
    - hosts:                                                
        - app.simplifydev.xyz
      secretName: app-simplifydev-xyz                        
      
  rules:                                                    
    - host: app.simplifydev.xyz                               
      http:                                                 
        paths:                                              
          - pathType: Prefix
            path: /                              
            backend:
              service:
                name: blog-endpoint
                port: 
                  number: 80
